fix: spacing

--- a/src/components/FlightDurationCard/FlightDurationCard.scss
+++ b/src/components/FlightDurationCard/FlightDurationCard.scss
@@ -15,7 +15,7 @@
   &__button-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 0.5rem 1rem;
   }
 
   &__button {
