--- a/src/pages/FormPage/FormPage.scss
+++ b/src/pages/FormPage/FormPage.scss
@@ -1,6 +1,6 @@
 .result {
   &__container {
-    padding: 0 1rem;
+    padding: 0 2rem;
   }
 
   &__title {
@@ -8,11 +8,11 @@
     font-weight: 700;
     line-height: 1.78125rem;
     margin: 0;
-    margin-bottom: 0.79rem;
+    margin-bottom: 0.5rem;
   }
 
   &__title-container {
-    margin-bottom: 2.39rem;
+    margin-bottom: 2rem;
   }
 
   &__title-description {
